toolchain/parse/src/types/snapshots/knot_parse__types__type_expression__tests__string.snap
---
source: toolchain/parse/src/types/type_expression.rs
expression: ast
---
TypeExpression(
    Node(
        Primitive(
            String,
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                6,
            ),
        ),
        (),
    ),
)
